--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
             </div>
             <div class="feature-card card-3">
                 <div class="feature-icon bg-green"><i class="fas fa-search-location"></i></div>
-                <h3>Prime Location</h3>
-                <p>Situated centrally at Jawahar Chowk, T.T. Nagar, ensuring easy connectivity for all students.</p>
+                <h3>Personal Growth & Skill Development</h3>
+                <p>College life helps you build independence, critical thinking, and leadership skills. A unique college emphasizes creativity and innovation, shaping you into a well-rounded professional.</p>
             </div>
         </div>
     </section>
