--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             <div class="feature-card card-3">
                 <div class="feature-icon bg-green"><i class="fas fa-search-location"></i></div>
                 <h3>Personal Growth & Skill Development</h3>
-                <p>College life helps you build independence, critical thinking, and leadership skills. A unique college emphasizes creativity and innovation, shaping you into a well-rounded professional.</p>
+                <p>College life helps you build independence, critical thinking, and leadership skills. Our college emphasizes creativity and innovation, shaping you into a well-rounded professional.</p>
             </div>
         </div>
     </section>
