--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             <div class="course-block">
                 <div class="course-icon"><i class="fas fa-palette"></i></div>
                 <h3>Bachelor of Arts (B.A)</h3>
-                <p>Comprehensive study of Humanities and Social Sciences.</p>
+                <p>Specialization in History, Sociology, Political Science, Economics</p>
                 <span class="course-tag tag-ug">Undergraduate</span>
             </div>
 
@@ -357,8 +357,8 @@
 
             <div class="course-block">
                 <div class="course-icon"><i class="fas fa-dna"></i></div>
-                <h3>B.Sc (Biotech / Micro)</h3>
-                <p>Specializations in Biotechnology and Microbiology.</p>
+                <h3>B.Sc (Biotechnology , Micro Biology ,Zoology, Botany , chemistry)</h3>
+                <p>Specialization as per NEP Guideline.</p>
                 <span class="course-tag tag-ug">Undergraduate</span>
             </div>
 
